[package]
name = "flux-reconcile"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "pleme-io GitHub Action — force a FluxCD HelmRelease/Kustomization/GitRepository reconcile + wait for Ready"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/flux-reconcile"

[[bin]]
name = "flux-reconcile"
path = "src/main.rs"

[dependencies]
pleme-actions-shared = { git = "https://github.com/pleme-io/pleme-actions-shared" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[lints.clippy]
pedantic = "warn"
